@@ -1,3 +1,12 @@
+2024-06-16T00:47:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9532051791 # 328
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-16
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 833 1308 / 838 1313
+* notice: next accum: outdated-unq outdated-all / unq all: 834 1309 / 839 1314
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-06-02] / [2024-06-15]
+
 2024-06-15T00:42:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9524071747 # 327
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-15
